--- a/src/components/Country/Country.css
+++ b/src/components/Country/Country.css
@@ -1,10 +1,82 @@
-img {
-    width: 50px;
-    height: 50px;
+.country-card {
+    margin: 2%;
+    padding: 0px;
+    width: 15%;
+    height: 500px;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    transition: transform 1s;
 }
 
-.country {
-    border: 2px solid cyan;
-    margin: 20px;
-    width: 400px;
+.country-card:hover {
+    transform: translateY(-12px);
+}
+
+h6 {
+    margin: 0;
+}
+
+.country-details {
+    margin: 0;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+button {
+    margin-top: auto;
+    justify-self: end;
+    height: 15%;
+    border: none;
+    outline: none;
+}
+
+button:hover {
+    cursor: pointer;
+    background-color: goldenrod;
+}
+
+.image {
+    width: 100%;
+    height: 200px;
+    box-shadow: 2px 2px 5px lightgray;
+}
+
+.flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 200px;
+    perspective: 1000px;
+}
+
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.flip-card-front {
+    color: black;
+}
+
+.flip-card-back {
+    background-color: dodgerblue;
+    color: white;
+    transform: rotateY(180deg);
 }
